[metadata]
name = nigsp
url = https://github.com/MIPLabCH/nigsp
download_url = https://github.com/MIPLabCH/nigsp
author = Stefano Moia
maintainer = Stefano Moia
maintainer_email = s.moia.research@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = Apache-2.0
description = A python library (and toolbox!) to run Graph Signal Processing on multimodal MRI data.
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    nigsp

[options]
python_requires = >=3.6
install_requires =
    numpy>=1.9.3
tests_require =
    pytest >=3.6
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
mat =
    pymatreader
    scipy
nifti =
    nibabel
viz =
    matplotlib>=3.1.1
    nilearn>=0.7.0
all =
    %(nifti)s
    %(mat)s
    %(viz)s
doc =
    sphinx >=2.0
    sphinx-argparse
    sphinx_rtd_theme
style =
    flake8 >=3.7
test =
    %(all)s
    %(style)s
    pytest-cov
    coverage
dev =
    %(doc)s
    %(test)s

[options.entry_points]
console_scripts =
    nigsp=nigsp.workflow:_main

[flake8]
doctest = True
exclude=
    *build/
    tests
ignore = E126, E402, W503
max-line-length = 99
per-file-ignores =
    */__init__.py:F401

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[versioneer]
VCS = git
style = pep440
versionfile_source = nigsp/_version.py
versionfile_build = nigsp/_version.py
tag_prefix =
parentdir_prefix =
