[metadata]
name = nigsp
url = https://github.com/MIPLabCH/nigsp
download_url = https://github.com/MIPLabCH/nigsp
author = Stefano Moia
maintainer = Stefano Moia
maintainer_email = s.moia.research@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = Apache-2.0
description = A python library (and toolbox!) to run Graph Signal Processing on multimodal MRI data.
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    nigsp

[options]
python_requires = >=3.6
install_requires =
    numpy>=1.17
    duecredit
tests_require =
    pytest >=3.6
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
mat =
    pymatreader
    scipy
nifti =
    nibabel
viz =
    matplotlib>=3.1.1
    nilearn>=0.7.0
all =
    %(nifti)s
    %(mat)s
    %(viz)s
doc =
    sphinx>=2.0
    sphinx-argparse
    sphinx_rtd_theme
    myst-parser
style =
    flake8>=4.0
    black<23.0.0
    isort<6.0.0
test =
    %(all)s
    %(style)s
    pytest-cov
    coverage
dev =
    %(doc)s
    %(test)s

[options.entry_points]
console_scripts =
    nigsp=nigsp.workflow:_main

[flake8]
doctest = True
exclude =
    _version.py
    ./nigsp/cli/__init__.py
    tests
ignore = E126, E402, W503, F401, F811
max-line-length = 88
extend-ignore = E203, E501
extend-select = B950
per-file-ignores =
    workflow.py:D401

[isort]
profile = black
skip_gitignore = true
extend_skip =
    .autorc
    .coverage*
    .readthedocs.yml
    .zenodo.json
    codecov.yml
    setup.py
    versioneer.py
    nigsp/_version.py
skip_glob =
    docs/*

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[coverage:run]
branch = True
omit =
    nigsp/tests/*
    docs/*
    setup.py
    versioneer.py
    doi.py
    __init__.py
    */__init__.py
    */*/__init__.py

[versioneer]
VCS = git
style = pep440
versionfile_source = nigsp/_version.py
versionfile_build = nigsp/_version.py
tag_prefix =
parentdir_prefix =
