[metadata]
name = nigsp
url = https://github.com/MIPLabCH/nigsp
download_url = https://github.com/MIPLabCH/nigsp
author = Stefano Moia
maintainer = Stefano Moia
maintainer_email = s.moia.research@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = Apache-2.0
description = A python library (and toolbox!) to run Graph Signal Processing on multimodal MRI data.
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    nigsp

[options]
python_requires = >=3.7
install_requires =
    numpy>=1.17
    duecredit
tests_require =
    pytest >=8.0
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
mat =
    pymatreader
    scipy
nifti =
    nibabel
viz =
    matplotlib>=3.1.1
    nilearn>=0.7.0
all =
    %(nifti)s
    %(mat)s
    %(viz)s
doc =
    furo
    memory-profiler
    myst-parser
    numpydoc
    sphinx>=2.0
    sphinx-argparse
    sphinxcontrib-apidoc
    sphinxcontrib-bibtex
    sphinx-copybutton
    sphinx-design
    sphinx-gallery
    sphinx-issues
style =
    isort
    pydocstyle
    codespell>=2.2.4
    ruff>=0.4.1
test =
    %(all)s
    %(style)s
    pytest>=8.0
    pytest-cov
    coverage
devtools =
    pre-commit
dev =
    %(devtools)s
    %(doc)s
    %(test)s

[options.entry_points]
console_scripts =
    nigsp=nigsp.workflow:_main

[pydocstyle]
convention = numpy
match =
    nigsp/*.py
match_dir = nigsp/[^tests]*

[codespell]
skip = versioneer.py,.git,build,./docs/_build
ignore-words-list = nd,commun
write-changes =
count =
quiet-level = 3

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[versioneer]
VCS = git
style = pep440
versionfile_source = nigsp/_version.py
versionfile_build = nigsp/_version.py
tag_prefix =
parentdir_prefix =
